@@ -2,6 +2,12 @@
   - Allow providing a non-standard (eventlet or
     other condition class) to the r/w lock for
     cases where it is useful to do so.
+  - Instead of having the r/w lock take a find
+    eventlet keyword argument, allow for it to
+    be provided a function that will be later
+    called to get the current thread. This allows
+    for the current *hack* to be easily removed
+    by users (if they so desire).
 0.8:
   - Add fastener logo (from openclipart).
   - Ensure r/w writer -> reader -> writer
